First pass of data processing

--- a/public/index.html
+++ b/public/index.html
@@ -27,25 +27,14 @@
         <div class="inner">
           <label id="all"><input type="checkbox" name="data" value="all" /> All</a></label>  
           <label id="random"><input type="checkbox" name="data" value="random" /> Random 5</a></label>
-          <label><input type="checkbox" name="data" value="001" /> GBA0001</a></label>
-          <label><input type="checkbox" name="data" value="001" /> GBA0001</a></label>
-          <label><input type="checkbox" name="data" value="001" /> GBA0001</a></label>
-          <label><input type="checkbox" name="data" value="001" /> GBA0001</a></label>
-          <label><input type="checkbox" name="data" value="001" /> GBA0001</a></label>
-          <label><input type="checkbox" name="data" value="001" /> GBA0001</a></label>
-          <label><input type="checkbox" name="data" value="001" /> GBA0001</a></label>
-          <label><input type="checkbox" name="data" value="001" /> GBA0001</a></label>
-          <label><input type="checkbox" name="data" value="001" /> GBA0001</a></label>
-          <label><input type="checkbox" name="data" value="001" /> GBA0001</a></label>
-          <label><input type="checkbox" name="data" value="001" /> GBA0001</a></label>
-          <label><input type="checkbox" name="data" value="001" /> GBA0001</a></label>
-          <label><input type="checkbox" name="data" value="001" /> GBA0001</a></label>
-          <label><input type="checkbox" name="data" value="001" /> GBA0001</a></label>
-          <label><input type="checkbox" name="data" value="001" /> GBA0001</a></label>
-          <label><input type="checkbox" name="data" value="001" /> GBA0001</a></label>
-          <label><input type="checkbox" name="data" value="001" /> GBA0001</a></label>
-          <label><input type="checkbox" name="data" value="001" /> GBA0001</a></label>
-          <label><input type="checkbox" name="data" value="001" /> GBA0001</a></label>
+          <label><input type="checkbox" name="data" value="GBA0001" /> GBA0001</a></label>
+          <label><input type="checkbox" name="data" value="GBA0002" /> GBA0002</a></label>
+          <label><input type="checkbox" name="data" value="GBA0003" /> GBA0003</a></label>
+          <label><input type="checkbox" name="data" value="GBA0004" /> GBA0004</a></label>
+          <label><input type="checkbox" name="data" value="GBA0005" /> GBA0005</a></label>
+          <label><input type="checkbox" name="data" value="GBA0006" /> GBA0006</a></label>
+          <label><input type="checkbox" name="data" value="GBA0007" /> GBA0007</a></label>
+          <label><input type="checkbox" name="data" value="GBA0008" /> GBA0008</a></label>
         </div>
       </div>
 
