Dataset upload functionality

--- a/public/index.html
+++ b/public/index.html
@@ -21,20 +21,22 @@
       </div>
     </div>
 
-    <form action="#" method="post">
+    <div id="main">
       <div class="section" id="data">
         <h2><span class="num">1</span> Choose some data.</h2>
         <div class="inner">
-          <label id="all"><input type="checkbox" name="data" value="all" /> All</a></label>  
-          <label id="random"><input type="checkbox" name="data" value="random" /> Random 5</a></label>
-          <label><input type="checkbox" name="data" value="GBA0001" /> GBA0001</a></label>
-          <label><input type="checkbox" name="data" value="GBA0002" /> GBA0002</a></label>
-          <label><input type="checkbox" name="data" value="GBA0003" /> GBA0003</a></label>
-          <label><input type="checkbox" name="data" value="GBA0004" /> GBA0004</a></label>
-          <label><input type="checkbox" name="data" value="GBA0005" /> GBA0005</a></label>
-          <label><input type="checkbox" name="data" value="GBA0006" /> GBA0006</a></label>
-          <label><input type="checkbox" name="data" value="GBA0007" /> GBA0007</a></label>
-          <label><input type="checkbox" name="data" value="GBA0008" /> GBA0008</a></label>
+          <p id="loading-data">Loading data sets…</p>
+          <div id="data-sets">
+            <label id="all"><input type="checkbox" name="data" value="all" /> All</a></label>  
+            <label id="random"><input type="checkbox" name="data" value="random" /> Random 5</a></label>
+          </div>
+          <div id="add-data-set-area">
+            <form action="/upload" method="post" enctype="multipart/form-data">
+              <p>Choose data set to upload:</p>
+              <input type="file" name="dataUpload" />
+            </form>
+          </div>
+          <p id="add-data-set"><a href="#">Add Data Set</a></p>
         </div>
       </div>
 
@@ -56,7 +58,7 @@
       <div class="submit">
         <a href="#">Submit</a>
       </div>
-    </form>
+    </div>
   </div>
   <div id="footer">
     <div class="inner">
