Form usability improvements.

--- a/public/index.html
+++ b/public/index.html
@@ -56,6 +56,7 @@
       </div>
 
       <div class="submit">
+        <p>Complete 1 and 2.</p>
         <a href="#">Submit</a>
       </div>
     </div>
