--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <div id="mast">
-    <h1>SuperSexySonic Data Visualizer™</h1>
+    <h1>SuperSexySonic Data Visualizer<span class="tm">™</span></h1>
   </div>
   <div id="wrapper">
     <div id="graph">
