--- a/public/index.html
+++ b/public/index.html
@@ -17,17 +17,24 @@
   <div id="wrapper">
     <div id="graph">
       <div class="inner">
-        [your graph will appear here]
+        <p id="graph-will-load-here">[your graph will appear here]</p>
+        <p id="graph-loading">Hardcore plotting action…</p>
       </div>
     </div>
 
     <div id="main">
+      <form action="#">
       <div class="section" id="data">
-        <h2><span class="num">1</span> Choose some data.</h2>
+        <h2><span class="num">1</span> Pick your poison.</h2>
         <div class="inner">
-          <p id="loading-data">Loading data sets…</p>
+          <ul id="graph-list">
+            <li><label><input type="radio" name="graph" value="bivariate" /> Bivariate Cluster Plot</label></li>
+            <li><label><input type="radio" name="graph" value="silhouette" /> Silhouette Plot</label></li>
+            <li><label><input type="radio" name="graph" value="another" /> Another Plot</label></li>
+          </ul>
+          <!--<p id="loading-data">Loading data sets…</p>
           <div id="data-sets">
-            <label id="all"><input type="checkbox" name="data" value="all" /> All</a></label>  
+            <label id="all"><input type="checkbox" name="data" value="all" /> All</a></label>
             <label id="random"><input type="checkbox" name="data" value="random" /> Random 5</a></label>
           </div>
           <div id="add-data-set-area">
@@ -36,13 +43,204 @@
               <input type="file" name="dataUpload" />
             </form>
           </div>
-          <p id="add-data-set"><a href="#">Add Data Set</a></p>
+          <p id="add-data-set"><a href="#">Add Data Set</a></p>-->
         </div>
       </div>
 
-      <div class="section" id="process">
-        <h2><span class="num">2</span> Do something with it.</h2>
+      <div class="section" id="options">
+        <h2><span class="num">2</span> A little more info…</h2>
         <div class="inner">
+          <div class="graph-option" id="graph-details-silhouette">
+            [no more info required...yet]
+          </div>
+          <div class="graph-option" id="graph-details-bivariate">
+            <fieldset>
+              <legend>Clusters</legend>
+              <p>Choose as many clusters as you&rsquo;d like.</p>
+              <p><label><input type="radio" name="random5" />Random 5</label></p>
+              <input type="hidden" name="randomClusterNum" />
+              <select name="clusters" multiple="multiple">
+                <option value="cluster1">Cluster 1</option>
+                <option value="cluster2">Cluster 2</option>
+                <option value="cluster3">Cluster 3</option>
+                <option value="cluster4">Cluster 4</option>
+                <option value="cluster5">Cluster 5</option>
+                <option value="cluster6">Cluster 6</option>
+                <option value="cluster7">Cluster 7</option>
+                <option value="cluster8">Cluster 8</option>
+                <option value="cluster9">Cluster 9</option>
+                <option value="cluster10">Cluster 10</option>
+                <option value="cluster11">Cluster 11</option>
+                <option value="cluster12">Cluster 12</option>
+                <option value="cluster13">Cluster 13</option>
+                <option value="cluster14">Cluster 14</option>
+                <option value="cluster15">Cluster 15</option>
+                <option value="cluster16">Cluster 16</option>
+                <option value="cluster17">Cluster 17</option>
+                <option value="cluster18">Cluster 18</option>
+                <option value="cluster19">Cluster 19</option>
+                <option value="cluster20">Cluster 20</option>
+                <option value="cluster21">Cluster 21</option>
+                <option value="cluster22">Cluster 22</option>
+                <option value="cluster23">Cluster 23</option>
+                <option value="cluster24">Cluster 24</option>
+                <option value="cluster25">Cluster 25</option>
+                <option value="cluster26">Cluster 26</option>
+                <option value="cluster27">Cluster 27</option>
+                <option value="cluster28">Cluster 28</option>
+                <option value="cluster29">Cluster 29</option>
+                <option value="cluster30">Cluster 30</option>
+                <option value="cluster31">Cluster 31</option>
+                <option value="cluster32">Cluster 32</option>
+                <option value="cluster33">Cluster 33</option>
+                <option value="cluster34">Cluster 34</option>
+                <option value="cluster35">Cluster 35</option>
+                <option value="cluster36">Cluster 36</option>
+                <option value="cluster37">Cluster 37</option>
+                <option value="cluster38">Cluster 38</option>
+                <option value="cluster39">Cluster 39</option>
+                <option value="cluster40">Cluster 40</option>
+                <option value="cluster41">Cluster 41</option>
+                <option value="cluster42">Cluster 42</option>
+                <option value="cluster43">Cluster 43</option>
+                <option value="cluster44">Cluster 44</option>
+                <option value="cluster45">Cluster 45</option>
+                <option value="cluster46">Cluster 46</option>
+                <option value="cluster47">Cluster 47</option>
+                <option value="cluster48">Cluster 48</option>
+                <option value="cluster49">Cluster 49</option>
+                <option value="cluster50">Cluster 50</option>
+                <option value="cluster51">Cluster 51</option>
+                <option value="cluster52">Cluster 52</option>
+                <option value="cluster53">Cluster 53</option>
+                <option value="cluster54">Cluster 54</option>
+                <option value="cluster55">Cluster 55</option>
+                <option value="cluster56">Cluster 56</option>
+                <option value="cluster57">Cluster 57</option>
+                <option value="cluster58">Cluster 58</option>
+                <option value="cluster59">Cluster 59</option>
+                <option value="cluster60">Cluster 60</option>
+                <option value="cluster61">Cluster 61</option>
+                <option value="cluster62">Cluster 62</option>
+                <option value="cluster63">Cluster 63</option>
+                <option value="cluster64">Cluster 64</option>
+                <option value="cluster65">Cluster 65</option>
+                <option value="cluster66">Cluster 66</option>
+                <option value="cluster67">Cluster 67</option>
+                <option value="cluster68">Cluster 68</option>
+                <option value="cluster69">Cluster 69</option>
+                <option value="cluster70">Cluster 70</option>
+                <option value="cluster71">Cluster 71</option>
+                <option value="cluster72">Cluster 72</option>
+                <option value="cluster73">Cluster 73</option>
+                <option value="cluster74">Cluster 74</option>
+                <option value="cluster75">Cluster 75</option>
+                <option value="cluster76">Cluster 76</option>
+                <option value="cluster77">Cluster 77</option>
+                <option value="cluster78">Cluster 78</option>
+                <option value="cluster79">Cluster 79</option>
+                <option value="cluster80">Cluster 80</option>
+                <option value="cluster81">Cluster 81</option>
+                <option value="cluster82">Cluster 82</option>
+                <option value="cluster83">Cluster 83</option>
+                <option value="cluster84">Cluster 84</option>
+                <option value="cluster85">Cluster 85</option>
+                <option value="cluster86">Cluster 86</option>
+                <option value="cluster87">Cluster 87</option>
+                <option value="cluster88">Cluster 88</option>
+                <option value="cluster89">Cluster 89</option>
+                <option value="cluster90">Cluster 90</option>
+                <option value="cluster91">Cluster 91</option>
+                <option value="cluster92">Cluster 92</option>
+                <option value="cluster93">Cluster 93</option>
+                <option value="cluster94">Cluster 94</option>
+                <option value="cluster95">Cluster 95</option>
+                <option value="cluster96">Cluster 96</option>
+                <option value="cluster97">Cluster 97</option>
+                <option value="cluster98">Cluster 98</option>
+                <option value="cluster99">Cluster 99</option>
+                <option value="cluster100">Cluster 100</option>
+                <option value="cluster101">Cluster 101</option>
+                <option value="cluster102">Cluster 102</option>
+                <option value="cluster103">Cluster 103</option>
+                <option value="cluster104">Cluster 104</option>
+                <option value="cluster105">Cluster 105</option>
+                <option value="cluster106">Cluster 106</option>
+                <option value="cluster107">Cluster 107</option>
+                <option value="cluster108">Cluster 108</option>
+                <option value="cluster109">Cluster 109</option>
+                <option value="cluster110">Cluster 110</option>
+                <option value="cluster111">Cluster 111</option>
+                <option value="cluster112">Cluster 112</option>
+                <option value="cluster113">Cluster 113</option>
+                <option value="cluster114">Cluster 114</option>
+                <option value="cluster115">Cluster 115</option>
+                <option value="cluster116">Cluster 116</option>
+                <option value="cluster117">Cluster 117</option>
+                <option value="cluster118">Cluster 118</option>
+                <option value="cluster119">Cluster 119</option>
+                <option value="cluster120">Cluster 120</option>
+                <option value="cluster121">Cluster 121</option>
+                <option value="cluster122">Cluster 122</option>
+                <option value="cluster123">Cluster 123</option>
+                <option value="cluster124">Cluster 124</option>
+                <option value="cluster125">Cluster 125</option>
+                <option value="cluster126">Cluster 126</option>
+                <option value="cluster127">Cluster 127</option>
+                <option value="cluster128">Cluster 128</option>
+                <option value="cluster129">Cluster 129</option>
+                <option value="cluster130">Cluster 130</option>
+                <option value="cluster131">Cluster 131</option>
+                <option value="cluster132">Cluster 132</option>
+                <option value="cluster133">Cluster 133</option>
+                <option value="cluster134">Cluster 134</option>
+                <option value="cluster135">Cluster 135</option>
+                <option value="cluster136">Cluster 136</option>
+                <option value="cluster137">Cluster 137</option>
+                <option value="cluster138">Cluster 138</option>
+                <option value="cluster139">Cluster 139</option>
+                <option value="cluster140">Cluster 140</option>
+                <option value="cluster141">Cluster 141</option>
+                <option value="cluster142">Cluster 142</option>
+                <option value="cluster143">Cluster 143</option>
+                <option value="cluster144">Cluster 144</option>
+                <option value="cluster145">Cluster 145</option>
+                <option value="cluster146">Cluster 146</option>
+                <option value="cluster147">Cluster 147</option>
+                <option value="cluster148">Cluster 148</option>
+                <option value="cluster149">Cluster 149</option>
+                <option value="cluster150">Cluster 150</option>
+                <option value="cluster151">Cluster 151</option>
+                <option value="cluster152">Cluster 152</option>
+                <option value="cluster153">Cluster 153</option>
+                <option value="cluster154">Cluster 154</option>
+                <option value="cluster155">Cluster 155</option>
+                <option value="cluster156">Cluster 156</option>
+                <option value="cluster157">Cluster 157</option>
+                <option value="cluster158">Cluster 158</option>
+                <option value="cluster159">Cluster 159</option>
+                <option value="cluster160">Cluster 160</option>
+                <option value="cluster161">Cluster 161</option>
+                <option value="cluster162">Cluster 162</option>
+                <option value="cluster163">Cluster 163</option>
+                <option value="cluster164">Cluster 164</option>
+                <option value="cluster165">Cluster 165</option>
+                <option value="cluster166">Cluster 166</option>
+                <option value="cluster167">Cluster 167</option>
+                <option value="cluster168">Cluster 168</option>
+                <option value="cluster169">Cluster 169</option>
+                <option value="cluster170">Cluster 170</option>
+                <option value="cluster171">Cluster 171</option>
+                <option value="cluster172">Cluster 172</option>
+                <option value="cluster173">Cluster 173</option>
+              </select>
+            </fieldset>
+          </div>
+          <div class="graph-option" id="graph-details-another">
+            [not implemented yet]
+          </div>
+        </div>
+        <!--<div class="inner">
           <div class="process">
             <input id="process-regression" type="radio" name="process" value="regression" />
             <label for="process-regression"> Regression</label>
@@ -52,18 +250,14 @@
             <input id="process-cluster" type="radio" name="process" value="cluster" />
             <label for="process-cluster"> Cluster</label>
           </div>
-        </div>
+        </div>-->
       </div>
 
       <div class="submit">
         <p>Complete 1 and 2.</p>
-        <a href="#">Submit</a>
+        <a id="form-submit" href="#">Submit</a>
       </div>
-    </div>
-  </div>
-  <div id="footer">
-    <div class="inner">
-      <!--By <a href="https://github.com/joshleitzel"><span class="name">Josh</span></a>, <a href="https://github.com/amb691"><span class="name">Ari</span></a>, <a href="https://github.com/kekumu"><span class="name">Nick</a>, <a href="https://github.com/jloom6"><span class="name">John</span></a>, &amp; <a href="https://github.com/hangzhong"><span class="name">Hang</span></a>.-->
+      </form>
     </div>
   </div>
 </body>
