First pass of custom colors working

--- a/public/index.html
+++ b/public/index.html
@@ -243,9 +243,9 @@
               <div class="visual">
                 <label>Observation Points</label>
                 <div class="color-container">
-                  <div class="color" data-default="9,178,230">
+                  <div class="color">
                     <div class="colorsub">
-                      <input data-visual="true" type="hidden" name="bivariate-colp" />
+                      <input data-visual="true" type="hidden" name="bivariate-colp" value="9,178,230" />
                     </div>
                   </div>
                 </div>
