first pass of graph history

--- a/public/index.html
+++ b/public/index.html
@@ -20,13 +20,6 @@
     <h1>SuperSexySonic Data Visualizer<span class="tm">™</span></h1>
   </div>
   <div id="wrapper">
-    <div id="graph">
-      <div class="inner">
-        <p id="graph-will-load-here">[your graph will appear here]</p>
-        <p id="graph-loading">Hardcore plotting action…</p>
-      </div>
-    </div>
-
     <div id="main">
       <form action="#">
       <div class="section" id="data">
@@ -300,6 +293,25 @@
         <a id="form-submit" href="#">Submit</a>
       </div>
       </form>
+    </div>
+
+    <div id="graph">
+      <div class="inner">
+        <p id="graph-will-load-here">[your graph will appear here]</p>
+        <p id="graph-loading">Hardcore plotting action…</p>
+        <div id="graph-container"></div>
+      </div>
+    </div>
+
+    <div id="graph-list">
+      <div class="inner">
+        <h3>Graph History</h2>
+        <ul></ul>
+        <div id="graph-tools">
+          <p id="download-zip"><a href="#">Download all as <span class="ext">.zip</span></a></p>
+          <p id="download-pdf"><a href="#">Download all as <span class="ext">.pdf</span></a></p>
+        </div>
+      </div>
     </div>
   </div>
 </body>
