Fixed duplicate #graph-list element

--- a/public/index.html
+++ b/public/index.html
@@ -303,7 +303,7 @@
       </div>
     </div>
 
-    <div id="graph-list">
+    <div id="graph-history">
       <div class="inner">
         <h3>Graph History</h2>
         <ul></ul>
