Mild CSS changes.

--- a/public/index.html
+++ b/public/index.html
@@ -314,5 +314,8 @@
       </div>
     </div>
   </div>
+  <div id="footer">
+    <div class="inner">Promotional consideration furnished by CRAN.</div>
+  </div>
 </body>
 </html>
