Bunch of refactoring, working tar utility.

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
   <script type="text/javascript" src="eye.js"></script>
   <script type="text/javascript" src="utils.js"></script>
   <script type="text/javascript" src="layout.js?ver=1.0.2"></script>
-  <script type="text/javascript" src="main.js"></script>
+  <script type="text/javascript" src="main.js?v=32"></script>
 </head>
 <body>
   <div id="mast">
