--- a/public/index.html
+++ b/public/index.html
@@ -308,7 +308,7 @@
         <h3>Graph History</h2>
         <ul></ul>
         <div id="graph-tools">
-          <p id="download-zip"><a href="#">Download all as <span class="ext">.zip</span></a></p>
+          <p id="download-tar"><a href="#">Download all as <span class="ext">.tar</span></a></p>
           <p id="download-pdf"><a href="#">Download all as <span class="ext">.pdf</span></a></p>
         </div>
       </div>
