Graph history changes.

--- a/public/index.html
+++ b/public/index.html
@@ -297,7 +297,7 @@
 
     <div id="graph">
       <div class="inner">
-        <p id="graph-will-load-here">[your graph will appear here]</p>
+        <p id="graph-will-load-here">Choose a graph to the left to get started.</p>
         <p id="graph-loading">Hardcore plotting action…</p>
         <div id="graph-container"></div>
       </div>
@@ -305,12 +305,14 @@
 
     <div id="graph-history">
       <div class="inner">
+        <a href="#" id="graph-history-clear">Clear</a>
         <h3>Graph History</h2>
         <ul></ul>
         <div id="graph-tools">
           <p id="download-tar"><a href="#">Download all as <span class="ext">.tar</span></a></p>
           <p id="download-pdf"><a href="#">Download all as <span class="ext">.pdf</span></a></p>
         </div>
+        <p id="no-graphs-yet">You don’t have any graphs yet.</p>
       </div>
     </div>
   </div>
