--- a/public/index.html
+++ b/public/index.html
@@ -55,8 +55,8 @@
             <fieldset>
               <legend>Clusters</legend>
               <div class="fieldset-inner">
-                <p>Choose as many clusters as you&rsquo;d like.</p>
-                <p><label><input type="radio" name="random5" />Random 5</label></p>
+                <p>Choose some clusters to plot.</p>
+                <p id="random"><label><input type="radio" name="random5" />Random 5</label></p>
                 <input type="hidden" name="randomClusterNum" />
                 <select name="clusters" multiple="multiple">
                   <option value="cluster1">Cluster 1</option>
