First pass of font customization.

--- a/public/index.html
+++ b/public/index.html
@@ -270,6 +270,13 @@
                 </div>
               </div>
             </fieldset>
+            <fieldset>
+              <legend>Font</legend>
+              <div class="fieldset-inner">
+                <label style="font-family: arial"><input data-visual="true" type="radio" name="bivariate-fontfamily" value="arial" /> Arial</label>
+                <label style="font-family: serif"><input data-visual="true" type="radio" name="bivariate-fontfamily" value="serif" /> Times New Roman</label>
+              </div>
+            </fieldset>
           </div>
           <div class="graph-option" id="graph-details-another">
             [not implemented yet]
