Implemented PDF tarball function.

--- a/public/index.html
+++ b/public/index.html
@@ -316,8 +316,8 @@
         <h3>Graph History</h2>
         <ul></ul>
         <div id="graph-tools">
-          <p id="download-tar"><a href="#">Download all as <span class="ext">.tar</span></a></p>
-          <p id="download-pdf"><a href="#">Download all as <span class="ext">.pdf</span></a></p>
+          <p id="download-tar"><a href="#">Download <span class="ext">.pngs</span> as <span class="ext">.tar</span></a></p>
+          <p id="download-pdf"><a href="#">Download <span class="ext">.pdfs</span> as <span class="ext">.tar</span></a></p>
         </div>
         <p id="no-graphs-yet">You don’t have any graphs yet.</p>
       </div>
