Font fixes; added new fonts.

--- a/public/index.html
+++ b/public/index.html
@@ -273,8 +273,13 @@
             <fieldset>
               <legend>Font</legend>
               <div class="fieldset-inner">
-                <label style="font-family: arial"><input data-visual="true" type="radio" name="bivariate-fontfamily" value="arial" /> Arial</label>
+                <label style="font-family: arial"><input data-visual="true" type="radio" name="bivariate-fontfamily" value="sans" checked="checked" /> Arial</label>
                 <label style="font-family: serif"><input data-visual="true" type="radio" name="bivariate-fontfamily" value="serif" /> Times New Roman</label>
+                <label style="font-family: courier"><input data-visual="true" type="radio" name="bivariate-fontfamily" value="mono" /> Courier</label>
+                <label style="font-family: AvantGarde"><input data-visual="true" type="radio" name="bivariate-fontfamily" value="AvantGarde" />Avant Garde</label>
+                <label style="font-family: Bookman"><input data-visual="true" type="radio" name="bivariate-fontfamily" value="Bookman" /> Bookman</label>
+                <label style="font-family: Palatino"><input data-visual="true" type="radio" name="bivariate-fontfamily" value="Palatino" /> Palatino</label>
+                <label style="font-family: NewCenturySchoolbook"><input data-visual="true" type="radio" name="bivariate-fontfamily" value="NewCenturySchoolbook" /> New Century Schoolbook</label>
               </div>
             </fieldset>
           </div>
