Added support for colro=TRUE in clusplot

--- a/public/index.html
+++ b/public/index.html
@@ -236,6 +236,13 @@
               </div>
             </fieldset>
             <fieldset>
+              <legend>Options</legend>
+              <div class="fieldset-inner">
+                <label><input data-options="true" type="checkbox" name="bivariate-options-shade" /> Shade ellipses</label>
+                <label><input data-options="true" type="checkbox" name="bivariate-options-color" /> Color ellipses by density</label>
+              </div>
+            </fieldset>
+            <fieldset>
               <legend>Colors</legend>
               <div class="fieldset-inner">
                 <div class="visual">
@@ -264,6 +271,36 @@
                     <div class="color">
                       <div class="colorsub">
                         <input data-visual="true" type="hidden" name="bivariate-colclus" value="43,18,186" />
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="visual">
+                  <label>Ellipses 2</label>
+                  <div class="color-container">
+                    <div class="color">
+                      <div class="colorsub">
+                        <input data-visual="true" type="hidden" name="bivariate-colclus2" value="125,117,173" />
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="visual">
+                  <label>Ellipses 3</label>
+                  <div class="color-container">
+                    <div class="color">
+                      <div class="colorsub">
+                        <input data-visual="true" type="hidden" name="bivariate-colclus3" value="196,190,237" />
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="visual">
+                  <label>Ellipses 4</label>
+                  <div class="color-container">
+                    <div class="color">
+                      <div class="colorsub">
+                        <input data-visual="true" type="hidden" name="bivariate-colclus4" value="218,212,255" />
                       </div>
                     </div>
                   </div>
